@@ -1,0 +1,55 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "\u9177\u73a9\u6a02\u5718\u300a\u6708\u4eae\u97f3\u6a02\u300b\u767c\u884c\u6176\u795d\uff01\u6f22\u6c5f1,000\u67b6\u7121\u4eba\u6a5f\u71c8\u5149\u79c0\u9707\u64bc\u767b\u5834\uff01", "description": "\u9177\u73a9\u6a02\u5718\u300a\u6708\u4eae\u97f3\u6a02\u300b\u767c\u884c\u6176\u795d\uff01\u6f22\u6c5f1,000\u67b6\u7121\u4eba\u6a5f\u71c8\u5149\u79c0\u9707\u64bc\u767b\u5834\uff01", "url": "https://www.famechos.me/news/\u9177\u73a9\u6a02\u5718\u300a\u6708\u4eae\u97f3\u6a02\u300b\u767c\u884c\u6176\u795d\uff01\u6f22\u6c5f1,000\u67b6\u7121\u4eba\u6a5f\u71c8\u5149\u79c0\u9707\u64bc\u767b\u5834\uff01/", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-05T21:52:59.296062+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/酷玩樂團《月亮音樂》發行慶祝！漢江1,000架無人機燈光秀震撼登場！/"/>
+<meta name="description" content="酷玩樂團《月亮音樂》發行慶祝！漢江1,000架無人機燈光秀震撼登場！獨家報導，帶你體驗這場音樂盛事！">
+
+<meta name="keywords" content="酷玩樂團，月亮音樂，漢江無人機燈光秀，音樂發行慶祝，娛樂新聞">
+
+        <meta property="og:url" content="https://www.famechos.me/news/酷玩樂團《月亮音樂》發行慶祝！漢江1,000架無人機燈光秀震撼登場！/" />
+        <meta property="og:title" content="酷玩樂團《月亮音樂》發行慶祝！漢江1,000架無人機燈光秀震撼登場！" />
+        <meta property="og:description" content="酷玩樂團《月亮音樂》發行慶祝！漢江1,000架無人機燈光秀震撼登場！" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="酷玩樂團《月亮音樂》發行慶祝！漢江1,000架無人機燈光秀震撼登場！" />
+        <meta property="twitter:description" content="酷玩樂團《月亮音樂》發行慶祝！漢江1,000架無人機燈光秀震撼登場！" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+	<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"     integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+	<meta property="og:type" content="article" />
+	<meta name="robots" content="index, follow" />
+	<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+	<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+<h1>酷玩樂團《月亮音樂》發行慶祝！漢江1,000架無人機燈光秀震撼登場！</h1>
+</head>
+
+<body>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Fpn1imb9qZg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<p>為慶祝酷玩樂團最新專輯《月亮音樂》的發行，漢江Ttukseom Hangang Park將舉行一場由1,000架無人機組成的燈光秀。</p>
+<p>音樂製作人馬克斯·馬丁自2014年酷玩樂團的專輯《鬼故事》開始便與樂團合作，擔任共同作曲人和製作人。他參與了這張10首歌曲的專輯製作，包括單曲《Good Feelings》和《All My Love》等。</p>
+<p>以下是專輯的部分曲目：</p>
+<ul>
+<li>《Good Feelings》</li>
+<li>《All My Love》</li>
+<li>《We Pray》</li>
+<li>《feelslikeimfallinginlove》</li>
+</ul>
+<p>酷玩樂團已經為這場與首爾市政府合作舉辦的無人機燈光秀提前提供了《月亮音樂》專輯中的曲目。</p>
+<p>酷玩樂團將於明年4月在距離首爾不遠的高陽綜合運動場舉行六場演唱會，所有門票已經售罄，這將是樂團在韓國舉行的最高人數的演唱會，預計觀眾人數將達到20萬人。</p>
+
+<p>資料來源： Korea Herald</p>
+</body>
+</html>
