@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Sat, 05 Oct 2024 21:52:20 +0800</lastBuildDate>
+  <lastBuildDate>Sat, 05 Oct 2024 21:53:05 +0800</lastBuildDate>
 
   <item>
   <title>G-Dragon終於打破沉默！將在《劉QUIZ ON THE BLOCK》首次亮相，分享BIGBANG歲月、毒品風波和音樂復出計劃</title>
@@ -32,5 +32,10 @@
   <link>https://www.famechos.me/news/韓國樂隊熱潮來襲！DAY6、QWER等搖滾樂隊席捲音樂榜單，獨立樂隊也異軍突起/</link>
   <description>韓國樂隊熱潮來襲！DAY6、QWER等搖滾樂隊席捲音樂榜單，獨立樂隊也異軍突起</description>
   <pubDate>Sat, 05 Oct 2024 21:52:20 +0800</pubDate>
+</item><item>
+  <title>酷玩樂團《月亮音樂》發行慶祝！漢江1,000架無人機燈光秀震撼登場！</title>
+  <link>https://www.famechos.me/news/酷玩樂團《月亮音樂》發行慶祝！漢江1,000架無人機燈光秀震撼登場！/</link>
+  <description>酷玩樂團《月亮音樂》發行慶祝！漢江1,000架無人機燈光秀震撼登場！</description>
+  <pubDate>Sat, 05 Oct 2024 21:53:05 +0800</pubDate>
 </item></channel>
 </rss>
