@@ -36,4 +36,10 @@
     <ns0:changefreq>weekly</ns0:changefreq>
     <ns0:priority>0.90</ns0:priority>
   </ns0:url>
+<ns0:url>
+    <ns0:loc>https://www.famechos.me/news/酷玩樂團《月亮音樂》發行慶祝！漢江1,000架無人機燈光秀震撼登場！/</ns0:loc>
+    <ns0:lastmod>2024-10-05T21:53:05+08:00</ns0:lastmod>
+    <ns0:changefreq>weekly</ns0:changefreq>
+    <ns0:priority>0.90</ns0:priority>
+  </ns0:url>
 </ns0:urlset>
