@@ -36,3 +36,4 @@ https://www.koreaherald.com/view.php?ud=20241003050082
 https://www.koreaherald.com/view.php?ud=20241002050690
 https://www.koreaherald.com/view.php?ud=20241002050661
 https://www.koreaherald.com/view.php?ud=20241003050085
+https://www.koreaherald.com/view.php?ud=20241003050216
